[INTERNAL]SlideTile:Fix when the text inside the tile is overlapping with the footer
BCP: 2280133505

--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/NewsContent.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/NewsContent.less
@@ -26,6 +26,23 @@
 		}
 	}
 }
+
+.Stretch{
+	.sapMTileCnt.News .sapMNwC{
+		.sapMNwCCTxt .sapMText {
+			font-size: @sapMFontLargeSize;
+			color: @sapUiText;
+		}
+		.sapMNwCCTxt .sapMFT {
+			font-size: 0.938rem;
+			color: @sapUiText;
+		}
+		.sapMNwCSbh{
+			color: @sapUiText;
+		}
+	}
+}
+
 .sapMTileSmallPhone{
 	.sapMTileCnt.News{
 		.sapMTileCntContent{
